<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/input_current_layout"
        style="@style/modify_container_style"
        android:layout_below="@id/top_layout"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_25">

        <ImageView
            android:id="@+id/clearCurrentPwd"
            android:layout_width="@dimen/dimen_26"
            android:layout_height="@dimen/dimen_26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/clear_content_icon"
            />
        <EditText
            android:id="@+id/input_current_pwd"
            style="@style/modify_edit_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_36"
            android:layout_toLeftOf="@id/clearCurrentPwd"
            android:hint="@string/input_current_pwd"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/input_new_layout"
        style="@style/modify_container_style"
        android:layout_below="@id/input_current_layout"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35">
        <ImageView
            android:id="@+id/clearNewPwd"
            android:layout_width="@dimen/dimen_26"
            android:layout_height="@dimen/dimen_26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/clear_content_icon"
            />

        <EditText
            android:id="@+id/input_new_pwd"
            style="@style/modify_edit_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_36"
            android:layout_toLeftOf="@id/clearNewPwd"
            android:hint="@string/input_new_pwd"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_new_pwd_again_layout"
        style="@style/modify_container_style"
        android:layout_below="@id/input_new_layout"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35">

        <ImageView
            android:id="@+id/clearNewPwdAgainPwd"
            android:layout_width="@dimen/dimen_26"
            android:layout_height="@dimen/dimen_26"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/clear_content_icon"
            />
        <EditText
            android:id="@+id/input_new_pwd_again"
            style="@style/modify_edit_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_36"
            android:hint="@string/input_new_pwd_again"
            android:layout_toLeftOf="@id/clearNewPwdAgainPwd"
            />


    </RelativeLayout>

    <TextView
        android:id="@+id/submit_txt"
        style="@style/text_fff99_shadow_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_61"
        android:layout_below="@id/input_new_pwd_again_layout"
        android:layout_marginLeft="@dimen/dimen_35"
        android:layout_marginRight="@dimen/dimen_35"
        android:layout_marginTop="@dimen/dimen_10"
        android:background="@drawable/my_list_bg_selector"
        android:gravity="center"
        android:text="@string/submit_confirm_modify"
        android:textColor="@color/color_805500"
        android:textSize="@dimen/dimen_20"
        />
</RelativeLayout>
